segund aversion de html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola desde ejemplo Git</h1>
+    <h1>Hola desde ejemplo Git .</h1>
     
 </body>
 </html>
